--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /*general*/
 body{
-    background-color: #334756;
+    background-image: url(./img/background2.jpg);
+    
+    background-repeat: cover;
+    background-size: cover;
+    background-position: center;
+    height: 97vh;
 }
 
 main, button, h2, h3, h4{
@@ -10,7 +15,8 @@ main, button, h2, h3, h4{
 
 /*header*/
 header{
-    background-color: #082032;
+    background-color: #503925;
+    
     height: 100vh;
     width: 15vw;
     position: fixed;
@@ -32,7 +38,7 @@ header div{
 
 .logo{
     font-family: 'Bebas Neue', cursive;
-    color: #FF4C29;
+    color: #ffb429;
     font-size: 30px;
     width: 60%;
     padding: 20px 0;
@@ -40,17 +46,17 @@ header div{
 }
 
 .logo h1{
-    border: solid 5px #FF4C29;
+    border: solid 5px #ffb429;
     padding: 10px;
     border-radius: 3px;
 }
 
 .menu-button {
     width: 60%;
-    border: solid 4px #FF4C29;
+    border: solid 4px #ffb429;
     border-radius: 3px;
-    color: #082032;
-    background-color: #FF4C29;
+    color: #000000;
+    background-color: #ffb429;
     font-size: 20px;
     padding: 5px 0;
     margin: 1vh 0;
@@ -66,10 +72,10 @@ header div{
 .menu-info{
     width: 60%;
     height: 10vh;
-    background-color: #FF4C29;
+    background-color: #ffb429;
     display: none;
     border-radius: 3px;
-    color: #082032;
+    color: #000000;
     font-size: 18px;
     flex-direction: row;
     justify-content: center;
@@ -80,6 +86,10 @@ header div{
 }
 
 /*main*/
+main{
+    
+}
+
 .area-cards{
     position: absolute;
     top: 2vh;
@@ -94,7 +104,8 @@ header div{
     height: 89vh;
     width: 25.12vw;
     border-radius: 3px;
-    background-color: rgb(154, 166, 184);
+    background-color: #E0C097;
+    background-image: url("./img/antique-texture.jpg");
     margin: 0 0.5vw;
     display: flex;
     flex-direction: row;
@@ -107,7 +118,7 @@ header div{
 .edit{
     height: 2vw;
     width: 3vw;
-    color: #FF4C29;
+    color: #503925;
     border: none;
     background-color: transparent;
     font-size: 30px;
@@ -124,12 +135,12 @@ header div{
 }
 
 ::-webkit-scrollbar{
-    background-color: #082032;
+    background-color: #503925;
     position: absolute;
     left: 20vw;
 }
 ::-webkit-scrollbar-thumb {
-    background: #FF4C29;
+    background: #d89923;
 }
 
 .infos{
@@ -144,14 +155,14 @@ header div{
 .info-card h2:nth-child(1){
     font-weight: 800;
     font-size: 2.5vh;
-    color: #334756;
+    color: #000000;
     margin-bottom: 1vh;
 }
 
 .info-card h2:nth-child(2){
-    font-weight: 200;
-    font-size: 2vh;
-    color: #ffffff;
+    font-weight: 400;
+    font-size: 3vh;
+    color: #503925;
 }
 
 .info-text{
@@ -172,7 +183,7 @@ header div{
     border-radius: 3px;
     z-index: 99;
     padding: 2vh 2vw;
-    display: none;
+    display: flex;
 }
 
 .fechar-card{
