--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -9,11 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/managerstyle.css">
+    <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
     <header>
-        <div class="logo"><img src="./img/Hunterfy.png" alt="Hunterfy logo"><h1>MANAGER v1.0</h1></div>
+        <div class="janela-header">
+            <div class="logo"><a href="./manager.html"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>
+            <div><a href="./register.html"><button class="add-user"><i class="fas fa-user-plus"></i></button></a></div>
+        </div>
     </header>
     <section class="controller janela">
         <div class="valist-container">
@@ -37,6 +41,126 @@
         
            <h2 class="username">username</h2>
            <div class="itens-container">
+
+            <!--item-->
+        <ul class="item">
+            <!--campo1-->
+            <li class="title">
+                <ul class="columns">
+                    <li>user</li>
+                    <li>date</li>
+                    <li>PARCELID</li>
+                    <li>GIS IMAGE</li>
+                    <li>FLOODZONE</li>
+                    <li>FLOODZONE IMAGE</li>
+
+                </ul>
+            </li>
+            <li class="values">
+                <ul class="columns">
+                    <li>${element.user_id}</li>
+                    <li>${element.dateandtime}</li>
+                    <li>${element.parcelid}</li>
+                    <li><img src="${element.gisimg}"></li>
+                    <li>${element.floodzonetext}</li>
+                    <li><img src="${element.floodzoneimg}"></li>
+                </ul>
+            </li>
+            <!--campo2-->
+            <li class="title">
+                <ul class="columns">
+                    <li>MAPS LINK</li>
+                    <li>MAPS IMAGE</li>
+                    <li>STREETVIEW IMAGE</li>
+                    <li>TAX OWNED</li>
+                    <li>MARKET VALUE</li>
+                    <li>ACRES</li>
+
+                </ul>
+            </li>
+            <li class="values">
+                <ul class="columns">
+                    <li></li>
+                    <li>loremipsun</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </li>
+            <!--campo3-->
+            <li class="title">
+                <ul class="columns">
+                    <li>LATITUDE</li>
+                    <li>LONGITUDE</li>
+                    <li>ADRESS</li>
+                    <li>N1 ADRESS</li>
+                    <li>N2 ADRESS</li>
+                    <li>N3 ADRESS</li>
+
+                </ul>
+            </li>
+            <li class="values">
+                <ul class="columns">
+                    <li></li>
+                    <li>loremipsun</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </li>
+            <!--campo4-->
+            <li class="title">
+                <ul class="columns">
+                    <li>N4 ADRESS</li>
+                    <li>RANK LEVEL1</li>
+                    <li>OBS (LV1)</li>
+                    <li>RANK LEVEL 2</li>
+                    <li>RL2 USER</li>
+                    <li>RL2 OBS</li>
+
+                </ul>
+            </li>
+            <li class="values">
+                <ul class="columns">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li><input type="text"></li>
+                    <li><input type="text"></li>
+                    <li><input type="text"></li>
+                </ul>
+            </li>
+            <li class="title">
+                <ul class="columns">
+                    <li>RANK LEVEL3</li>
+                    <li>RL3 USER</li>
+                    <li>RL3 OBS</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+
+                </ul>
+            </li>
+            <li class="values">
+                <ul class="columns">
+		            <li><input type="text"></li>
+                    <li><input type="text"></li>
+                    <li><input type="text"></li>
+                    <li></li>
+                    <li></li>
+                    <li><button class="submitrank" type="submit">submit</button></li>
+                 
+                </ul>
+            </li>
+
+
+        </ul><!--item-->
+
+
+
+           </div>
             
   
 
