--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -15,8 +15,8 @@
 <body>
     <header>
         <div class="janela-header">
-            <div class="logo"><a href="./manager.html"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>
-            <div><a href="./register.html"><button class="add-user"><i class="fas fa-user-plus"></i></button></a></div>
+            <div class="logo"><a href="./manager.ejs"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>
+            <div><a href="./register.ejs"><button class="add-user"><i class="fas fa-user-plus"></i></button></a></div>
         </div>
     </header>
     <section class="controller janela">
