post method register

--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -24,9 +24,8 @@
             <h2>My user:</h2>
             <h3>gvmolinadmin</h3>
         </div>
-
-        
     </section>
+    
     <section class="program janela">
         <form class="register">
            <h2>Register a new user:</h2>
@@ -43,13 +42,10 @@
                 <input type="password" name="confpassword" id="confpassword">
             </div>
             <button class="submit-register">Register</button>
-           
-           
-
         </form>
            
     </section>
   
 
-    <script src="js/manager.js" async></script>
+    <script src="js/register.js" async></script>
 </body>
