puxando tabela de usuarios

--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -43,6 +43,12 @@
             </div>
             <button class="submit-register">Register</button>
         </form>
+
+        <div class="users-list">
+            <h2>All Users</h2>
+            <div class="users-container"></div>
+        </div>
+
            
     </section>
   
